--- a/diyPacletProject/.gitignore
+++ b/diyPacletProject/.gitignore
@@ -1,2 +1,8 @@
 /docbuild.xml
 /build/
+/diyPacletProject.nb
+/extensions13-11-2016.nb
+/PacletManagerData.nb
+/PacletSiteAdd.nb
+/rebuildaftermanualplay.nb
+/PacletSiteTutorial.nb
